--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Hu.Ziming (ziming@favoritemedium.com)",
   "license": "ISC",
   "dependencies": {
-    "koa": "^1.2.0"
+    "koa": "^1.2.0",
+    "koa-bodyparser": "^2.2.0",
+    "koa-logger": "^1.3.0",
+    "koa-route": "^2.4.2",
+    "koa-router": "^5.4.0",
+    "koa-validate": "^1.0.2"
   }
 }
