--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.2.0",
     "koa-logger": "^1.3.0",
+    "koa-pg": "^0.24.1",
     "koa-route": "^2.4.2",
     "koa-router": "^5.4.0",
-    "koa-validate": "^1.0.2"
+    "koa-validate": "^1.0.2",
+    "pg": "^4.5.5"
   }
 }
