--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "author": "Hu.Ziming (ziming@favoritemedium.com)",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.6",
+    "co": "^4.6.0",
+    "co-bcrypt": "^1.0.0",
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.2.0",
     "koa-logger": "^1.3.0",
+    "koa-passport": "^1.3.1",
     "koa-pg": "^0.24.1",
     "koa-route": "^2.4.2",
     "koa-router": "^5.4.0",
     "koa-validate": "^1.0.2",
-    "pg": "^4.5.5"
+    "mongodb": "^1.4.40",
+    "mongoose": "^4.4.17",
+    "passport-local": "^1.0.0"
   }
 }
