--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-pg": "^0.24.1",
     "koa-route": "^2.4.2",
     "koa-router": "^5.4.0",
+    "koa-session": "^3.3.1",
     "koa-validate": "^1.0.2",
     "mongodb": "^1.4.40",
     "mongoose": "^4.4.17",
